--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
+    "router": "^1.3.8",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.0.7"
