--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  
+     "homepage": "https://Abanoub-Melad.github.io/HomeHeart" ,
   "name": "e-commerce-mui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -19,7 +23,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.0.25",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
